--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div id="done" class="card" style="display:none;">
       <h2>Done ✅</h2>
-      <pre id="result"></pre>
+      <pre id="result" style="display:none;"></pre>
       <p>Thanks! You can close this page.</p>
     </div>
   </main>
