--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 
     <div id="done" class="card" style="display:none;">
       <h2>Done ✅</h2>
-      <pre id="result" style="display:none;"></pre>
-      <p>Thanks! You can close this page.</p>
+      <p id="doneText"></p>
+      <div id="scores" class="scores"></div>
+      <p class="small">Thanks! Your responses were saved anonymously.</p>
     </div>
   </main>
 
