--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
       <div class="scale">
         <button data-v="1">1<br><span>Strongly Disagree</span></button>
-        <button data-v="2">2</button>
+        <button data-v="2">2<br><span>Somewhat Disagree</span></button>
         <button data-v="3">3<br><span>Neutral</span></button>
-        <button data-v="4">4</button>
+        <button data-v="4">4<br><span>Somewhat Agree</span></button>
         <button data-v="5">5<br><span>Strongly Agree</span></button>
       </div>
     </div>
