--- a/index.html
+++ b/index.html
@@ -14,7 +14,28 @@
     </p>
 
     <div id="status"></div>
+    <div id="intro" class="card">
+      <h2 style="margin-top:0;">Welcome</h2>
 
+      <p class="small badge">CMPE 58I: Human Inspired Machine Intelligence</p>
+
+      <p>
+        This is an anonymous class project. Your responses will be stored <b>without your name</b>.
+        You can stop anytime by closing the page.
+      </p>
+
+      <p>
+        <b>About the Big Five:</b> The Big Five (OCEAN) is a widely used personality framework:
+        <b>O</b>penness, <b>C</b>onscientiousness, <b>E</b>xtraversion, <b>A</b>greeableness, and <b>N</b>euroticism.
+      </p>
+
+      <p>
+        <b>Purpose of this project:</b> Build an <b>adaptive</b> version that asks fewer questions while keeping
+        similar results to the full 50-item test.
+      </p>
+
+      <button id="startBtn" class="primaryBtn">Start the test</button>
+    </div>
     <div id="card" class="card" style="display:none;">
       <div id="qtext" class="qtext"></div>
 
