--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       </p>
 
       <button id="startBtn" class="primaryBtn">Start the test</button>
+      <button id="backBtn" class="primaryBtn" type="button">← Back</button>
     </div>
     <div id="card" class="card" style="display:none;">
       <div id="qtext" class="qtext"></div>
