--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
       </p>
 
       <button id="startBtn" class="primaryBtn">Start the test</button>
-      <button id="backBtn" class="primaryBtn" type="button">← Back</button>
+      
     </div>
     <div id="card" class="card" style="display:none;">
+      <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:12px;">
+        <button id="backBtn" class="primaryBtn" type="button"
+          style="background:#ffffff; color:var(--accent2); border:1px solid var(--border);">
+          ← Back
+        </button>
+      </div>
       <div id="qtext" class="qtext"></div>
 
       <div class="scale">
