--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
         similar results to the full 50-item test.
       </p>
 
-      <button id="startBtn" class="primaryBtn">Start the test</button>
+      <div style="display:flex; gap:12px; flex-wrap:wrap;">
+        <button id="startBtn" class="primaryBtn">Start the adaptive test</button>
+
+        <a class="primaryBtn"
+           style="text-decoration:none; background:#ffffff; color:var(--accent2); border:1px solid var(--border);"
+           href="./full.html">
+           Take full 50-item baseline
+        </a>
+      </div>
+      
       
     </div>
     <div id="card" class="card" style="display:none;">
