--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       <div style="display:flex; gap:12px; flex-wrap:wrap;">
         <button id="startBtn" class="primaryBtn">Start the adaptive test</button>
 
-        <a class="primaryBtn"
-           style="text-decoration:none; background:#ffffff; color:var(--accent2); border:1px solid var(--border);"
-           href="./full.html">
-           Take full 50-item baseline
+        <a href="./full.html"
+           class="primaryBtn"
+           style="text-decoration:none; background:#ffffff; color:var(--accent2); border:1px solid var(--border);">
+          Take full 50-item baseline
         </a>
       </div>
       
