--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
         similar results to the full 50-item test.
       </p>
 
+      <label class="small">
+        Choose a username (use the same one for both tests):
+      </label>
+
+      <input id="pidInput"
+             placeholder="e.g. user17"
+             style="margin:8px 0 12px; padding:10px; width:100%; max-width:320px;" />
+
+      <p class="small">
+        This is not your real name. It is only used to match your two test results.
+      </p>
+      
       <div style="display:flex; gap:12px; flex-wrap:wrap;">
         <button id="startBtn" class="primaryBtn">Start the adaptive test</button>
 
