--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
       <p id="doneText"></p>
       <div id="scores" class="scores"></div>
       <p class="small">Thanks! Your responses were saved anonymously.</p>
+
+      <div style="display:flex; gap:12px; flex-wrap:wrap; margin-top:10px;">
+        <a class="primaryBtn"
+           style="text-decoration:none; background:#ffffff; color:var(--accent2); border:1px solid var(--border);"
+           href="./full.html">
+          Take full 50-item baseline
+        </a>
+      </div>
     </div>
   </main>
 
